# http-service

./: .env  .gitattributes  .gitignore  README.md  compose.yaml  example.env
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/backend/: asgi.py  constants.py  environment.py  logging.py  settings.py  urls.py  wsgi.py
backend/core/: apps.py  exception_handler.py  urls.py
backend/core/admin/: __init__.py  request_detail_admin.py  request_info_admin.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: __init__.py  request_detail.py  request_info.py  uuid_audit_model.py
backend/core/v1/: request_data_serializer.py  request_detail_serializer.py  request_detail_view_set.py  urls.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/app/: store.ts
frontend/src/request-details/: request-detail.service.ts
frontend/src/request-details/components/: CreateRequest.tsx  RequestBar.tsx  RequestDetailTable.tsx  ShareRequestDetail.tsx
frontend/src/request-details/hooks/: useHttpRequest.ts
frontend/src/request-details/interfaces/: create-request-detail.ts  redirect-info.ts  request-detail-data.ts  request-detail.ts  update-request-detail.ts
frontend/src/services/: base-query.ts
frontend/src/shared/: types.ts  utils.ts
frontend/src/shared/components/: FormContainer.tsx  Layout.tsx  Loader.tsx  Message.tsx  NotFound.tsx  constants.ts
frontend/src/shared/services/: base-query.ts
